feat(inte): inte location and presentation

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,7 @@
 header {
-    p {
-        font-family: 'Shrikhand', sans-serif;
-        font-size: 3.90rem;
+    h1 {
         text-align: center;
 
-        margin: 35px 0 20px 0;
+        margin: 40px 0 20px 0;
     }
 }
