--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -341,19 +341,70 @@ template {
 
 body {
   font-family: "Roboto", sans-serif;
-  /*font-size: 15px;
-  font-weight: 400;*/
+  font-size: 2rem;
+  font-weight: 700;
 }
 
-header p {
+header h1 {
   font-family: "Shrikhand", sans-serif;
   font-size: 3.9rem;
+  font-weight: 400;
+}
+
+.presentation h1 {
+  font-size: 3rem;
+  font-weight: 900;
+}
+.presentation p {
+  font-size: 2.2rem;
+  font-weight: 400;
+}
+
+.button {
+  color: white;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+header h1 {
   text-align: center;
-  margin: 35px 0 20px 0;
+  margin: 40px 0 20px 0;
 }
 
 .location {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 33px;
   background-color: #eaeaea;
+  box-shadow: inset 0 15px 10px -10px #cfcfcf;
+}
+
+.presentation {
+  padding: 0 40px 0 40px;
+  text-align: center;
+  background: linear-gradient(white, #f6f6f6);
+  padding-bottom: 115px;
+}
+.presentation h1 {
+  padding: 48px 80px 0 80px;
+}
+.presentation p {
+  padding-bottom: 28px;
+}
+
+.manual {
+  padding: 0 40px 0 40px;
+}
+
+.button {
+  display: block;
+  width: 65%;
+  background: linear-gradient(-5deg, #9356DC, #FF79DA);
+  border-radius: 50px;
+  box-shadow: 0 10px 10px 0 #cfcfcf;
+  margin: 0 auto;
+  padding: 33px 0 33px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
