--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,4 +9,6 @@ $color-backgournd-footer: #353535;
 $color-txt: black;
 $color-txt-icone: #7e7e7e;
 
-$color-shadow: #cfcfcf; // TODO : mixin for gradiant from this to tranlucide
+$color-shadow: #cfcfcf;
+
+$padding-main : 40px;
