--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,33 @@
 body {
     font-family: 'Roboto', sans-serif;
-    /*font-size: 15px;
-    font-weight: 400;*/
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+header {
+    h1 {
+        font-family: 'Shrikhand', sans-serif;
+        font-size: 3.90rem;
+        font-weight: 400;
+    }
+}
+
+.presentation {
+    h1 {
+        font-size: 3rem;
+        font-weight: 900;
+    }
+
+    p {
+        font-size: 2.2rem;
+        font-weight: 400;
+    }
+}
+
+.button {
+    color: white;
+
+    font-weight: 400;
+
+    text-decoration: none;
 }
