--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,5 +1,33 @@
 @use '../abstracts' as *;
 
 .location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 33px;
+
     background-color: $color-background-location;
+
+    box-shadow: inset 0 15px 10px -10px $color-shadow;      
+}
+
+.presentation {
+    @include padding-main;
+
+    text-align: center;
+
+    background: linear-gradient(white, $color-background-bloc);
+    padding-bottom: 115px;
+
+    h1 {
+        padding: 48px $padding-main*2 0 $padding-main*2;
+    }
+
+    p {
+        padding-bottom: 28px;
+    }
+}
+
+.manual {
+    @include padding-main;
 }
