--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,14 +1,18 @@
+$box-model: border-box;
+
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 
 $color-background-location: #eaeaea;
 $color-background-bloc: #f6f6f6;
-$color-backgournd-footer: #353535;
+$color-background-footer: #353535;
 
 $color-txt: black;
 $color-txt-icone: #7e7e7e;
 
 $color-shadow: #cfcfcf;
+
+$button-lighten-coef: 5;
 
 $padding-main : 40px;
