--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,16 @@
+@use '../abstracts' as *;
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 2rem;
     font-weight: 700;
+}
+
+/** Layout **/
+
+h1 {
+    font-size: 3.1rem;
+    font-weight: 900;
 }
 
 header {
@@ -13,21 +22,82 @@ header {
 }
 
 .presentation {
-    h1 {
-        font-size: 3rem;
-        font-weight: 900;
-    }
-
     p {
         font-size: 2.2rem;
         font-weight: 400;
     }
 }
 
+.manual {
+    li {
+        i {
+            color: $color-txt-icone;
+            font-size: 2.6rem;
+        }
+
+        &::before {
+            color: white;
+            font-size: 1.7rem;
+            font-weight: 400;
+        }
+
+        &:hover i {
+            color: $color-primary;
+        }
+    }
+}
+
+/** Components **/
+
 .button {
     color: white;
-
     font-weight: 400;
-
     text-decoration: none;
+}
+
+.restaurant-card {
+    .new {
+        color: darken($color-tertiary, 40);
+        font-size: 1.8rem;
+        font-weight: 700;
+    }
+
+    a {
+        color: black;
+        text-decoration: none;
+    }
+
+    &__description {
+        &--left {
+            h2, p {
+                font-size: 2.3rem;
+            }
+        
+            p {
+                font-weight: 400;
+            }
+        }
+
+        &--right {
+            font-size: 4rem;
+            text-align: end;
+        }
+    }
+}
+
+footer {
+    color: white;
+
+    p {
+        font-family: 'Shrikhand', sans-serif;
+        font-size: 2rem;
+        font-weight: 400;
+    }
+
+    a {
+        color: white;
+        font-size: 2rem;
+        font-weight: 400;
+        text-decoration: none;
+    }
 }
