--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -7,8 +7,8 @@
     gap: 33px;
 
     background-color: $color-background-location;
-
-    box-shadow: inset 0 15px 10px -10px $color-shadow;      
+    box-shadow: inset 0 15px 10px -10px $color-shadow;
+    padding-top: 4px;
 }
 
 .presentation {
@@ -20,7 +20,7 @@
     padding-bottom: 115px;
 
     h1 {
-        padding: 48px $padding-main*2 0 $padding-main*2;
+        padding: 50px $padding-main*2 0 $padding-main*2;
     }
 
     p {
@@ -30,4 +30,65 @@
 
 .manual {
     @include padding-main;
+
+    padding-top: 65px;
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+        
+        list-style-type: none;
+        margin-top: 60px;
+        padding: 0;
+    }
+
+    li {
+        width: 100%;
+
+        background-color: $color-background-bloc;
+        border-radius: 45px;
+        box-shadow: 0 10px 30px 0 $color-shadow;
+        counter-increment: list;
+        padding: 60px;
+        padding-left: 170px;
+
+        i {
+            position: absolute;
+            left: 120px;
+        }
+
+        &::before {
+            content: counter(list);
+
+            position: absolute;
+            left: 18px;
+
+            background-color: $color-primary;
+            border-radius: 50%;
+            padding: 0.4rem 0.9rem;
+        }
+
+        &:hover {
+            background-color: lighten($color-primary, 35);
+        }
+    }
+}
+
+.restaurants {
+    @include padding-main;
+
+    background-color: $color-background-bloc;
+    margin-top: 138px;
+    padding-bottom: 125px;
+    padding-top: 80px;
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+
+        margin-top: 45px;
+    }
 }
