--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,9 @@ header h1 {
   font-size: 3.9rem;
   font-weight: 400;
 }
+header.--with-home-link a {
+  color: black;
+}
 
 .presentation p {
   font-size: 2.2rem;
@@ -383,10 +386,36 @@ header h1 {
   color: #9356DC;
 }
 
+.restaurant__title h1 {
+  font-family: "Shrikhand", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 400;
+}
+.restaurant__title i {
+  font-size: 4rem;
+}
+.restaurant__menu h2 {
+  font-size: 2rem;
+  font-weight: 400;
+}
+.restaurant .dishe__description--complement p {
+  font-weight: 400;
+}
+.restaurant .dishe__description--complement p.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.restaurant .dishe__check {
+  color: white;
+  font-size: 2.5rem;
+}
+
 /** Components **/
 .button {
   color: white;
   font-weight: 400;
+  text-align: center;
   text-decoration: none;
 }
 
@@ -428,6 +457,15 @@ footer a {
 header h1 {
   text-align: center;
   margin: 40px 0 20px 0;
+}
+header.--with-home-link {
+  position: relative;
+}
+header.--with-home-link a {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 30px;
 }
 
 .location {
@@ -503,6 +541,78 @@ header h1 {
   flex-direction: column;
   gap: 35px;
   margin-top: 45px;
+}
+
+.restaurant {
+  background-color: #f6f6f6;
+  padding-bottom: 120px;
+}
+.restaurant__illustration {
+  width: 100%;
+}
+.restaurant__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  top: -72px;
+  background-color: #f6f6f6;
+  border-radius: 70px;
+  padding: 42px 45px 0 45px;
+  margin-bottom: -105px;
+}
+.restaurant__menu h2 {
+  padding: 40px 45px 0 45px;
+}
+.restaurant__menu h2:after {
+  content: "";
+  display: block;
+  border-bottom: solid 5px #99E2D0;
+  transform: scaleX(0.125);
+  transform-origin: 0% 0%;
+  padding-top: 10px;
+}
+.restaurant__menu .button {
+  margin-top: 80px;
+  max-width: 55%;
+}
+.restaurant .dishes-list {
+  padding: 0 30px 0 30px;
+}
+.restaurant .dishe {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 0 10px 30px 0 #cfcfcf;
+  margin-bottom: 30px;
+}
+.restaurant .dishe__description {
+  flex: 1;
+  min-width: 0;
+  padding: 25px 0 25px 20px;
+}
+.restaurant .dishe__description--complement {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  padding-right: 50px;
+}
+.restaurant .dishe__check {
+  flex: 0.2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #99E2D0;
+  border-radius: 0 30px 30px 0;
+  display: none;
+}
+.restaurant .dishe p, .restaurant .dishe h3 {
+  margin: 0;
+}
+.restaurant .dishe:hover .dishe__check {
+  display: flex;
 }
 
 footer {
