--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -51,6 +51,7 @@
             i:hover:before {
                 //transition: all 0 ease-in-out;
                 font-weight: 900;
+                background-clip: text;
                 -webkit-background-clip: text;
                 background-image: linear-gradient(-5deg, $color-secondary, $color-primary);
                 -webkit-text-fill-color: transparent;
