--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,11 @@ header.--with-home-link a {
   white-space: nowrap;
   overflow: hidden;
 }
+.restaurant .dishe__description h3 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
 .restaurant .dishe__check {
   color: white;
   font-size: 2.5rem;
@@ -549,6 +554,8 @@ header.--with-home-link a {
 }
 .restaurant__illustration {
   width: 100%;
+  max-height: 512px;
+  object-fit: cover;
 }
 .restaurant__title {
   display: flex;
