--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -113,6 +113,15 @@
         border-radius: 70px;
         padding: 42px 45px 0 45px;
         margin-bottom: -105px;
+
+        i:hover:before {
+            //transition: all 0 ease-in-out;
+            font-weight: 900;
+            background-clip: text;
+            -webkit-background-clip: text;
+            background-image: linear-gradient(-5deg, $color-secondary, $color-primary);
+            -webkit-text-fill-color: transparent;
+        }
     }
     &__menu {
         h2 {
