--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -20,6 +20,11 @@ header {
         font-family: 'Shrikhand', sans-serif;
         font-size: 3.90rem;
         font-weight: 400;
+
+        a {
+            color: black;
+            text-decoration: none;
+        }
     }
 
     &.--with-home-link {
