--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -42,20 +42,25 @@
             gap: 50px;
             
             list-style-type: none;
+            margin-left: 23px;
             margin-top: 60px;
             padding: 0;
         }
     
         li {
+            counter-increment: list;
             width: 100%;
     
             background-color: $color-background-bloc;
             border-radius: 45px;
             box-shadow: 0 10px 30px 0 $color-shadow;
-            counter-increment: list;
             padding: 60px;
             padding-left: 170px;
-    
+
+            &:hover {
+                background-color: lighten($color-primary, 35);
+            }
+
             i {
                 position: absolute;
                 left: 120px;
@@ -63,18 +68,14 @@
     
             &::before {
                 content: counter(list);
-    
                 position: absolute;
-                left: 18px;
+                left: $padding-main;
     
                 background-color: $color-primary;
                 border-radius: 50%;
                 padding: 0.4rem 0.9rem;
             }
-    
-            &:hover {
-                background-color: lighten($color-primary, 35);
-            }
+
         }
     }
 
