--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,4 +15,8 @@ $color-shadow: #cfcfcf;
 
 $button-lighten-coef: 5;
 
-$padding-main : 40px;
+$padding-main: 40px;
+
+$loader-time: 4s; 
+
+$dishe-animation-delay: 200ms;
