--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -71,6 +71,17 @@
     box-shadow: 0 10px 30px 0 $color-shadow;
     margin-bottom: 30px;
 
+    // For dishe animation
+    animation: dishes-loader 1s ease-out 1 both;
+    @for $i from 1 to 4 {
+        &:nth-child(#{$i+1}) {
+            animation-delay: $dishe-animation-delay * $i;
+        }
+    }
+
+    // For check animation
+    overflow: hidden;
+
     &__description {
         flex: 1;
         min-width: 0;
@@ -80,7 +91,7 @@
             justify-content: space-between;
 
             margin-top: 10px;
-            padding-right: 50px;
+            padding-right: 30px;
         }
     }
 
@@ -94,21 +105,27 @@
         border-radius: 0 30px 30px 0;
 
         display: none;
+        // For check animation
+        position: relative;
+        right: -112px;
+        transition: transform 500ms ease-in-out;
+        i {
+            transform: rotate(-270deg) scale(1,1);
+            transition: transform 400ms 100ms ease-in-out;
+        }
     }
 
     &:hover &__check {
         display: flex;
+        // For check animation
+        transform: translate(-112px, 0);
+        i {
+            transform: rotate(0deg);
+        }
     }
 
     p, h3 {
         margin: 0;
-    }
-
-    h3 {
-        padding-right: 150px;
-    }
-
-    p {
         padding-right: 15px;
     }
 }
