--- a/css/style.css
+++ b/css/style.css
@@ -347,22 +347,36 @@ template {
   display: none;
 }
 
+:root, html {
+  font-size: 1rem;
+}
+@media screen and (min-width: 576px) {
+  :root, html {
+    font-size: 1.7rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  :root, html {
+    font-size: 2.35rem;
+  }
+}
+
 body {
   font-family: "Roboto", sans-serif;
-  font-size: 2em;
+  font-size: 1rem;
   font-weight: 700;
 }
 
 /** Layout **/
 h1 {
-  font-size: 3.1rem;
+  font-size: 1.3rem;
   font-weight: 900;
 }
 
 /** Header **/
 header h1 {
   font-family: "Shrikhand", sans-serif;
-  font-size: 3.9rem;
+  font-size: 1.6rem;
   font-weight: 400;
 }
 header h1 a {
@@ -374,18 +388,24 @@ header.--with-home-link a {
 }
 
 /** Home **/
+.location {
+  font-size: 0.9rem;
+}
+
 .presentation p {
-  font-size: 2.2rem;
   font-weight: 400;
 }
 
+.manual li {
+  font-size: 0.9rem;
+}
 .manual li i {
   color: #7e7e7e;
-  font-size: 2.6rem;
+  font-size: 1rem;
 }
 .manual li::before {
   color: white;
-  font-size: 1.7rem;
+  font-size: 0.7rem;
   font-weight: 400;
 }
 .manual li:hover i {
@@ -395,20 +415,21 @@ header.--with-home-link a {
 /** Restaurant **/
 .restaurant__title h1 {
   font-family: "Shrikhand", sans-serif;
-  font-size: 3.5rem;
+  font-size: 1.4rem;
   font-weight: 400;
 }
 .restaurant__title i {
-  font-size: 4rem;
+  font-size: 1.5rem;
 }
 .restaurant__menu h2 {
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: 400;
 }
 
 /** Components **/
 .button {
   color: white;
+  font-size: 0.9rem;
   font-weight: 400;
   text-align: center;
   text-decoration: none;
@@ -416,7 +437,7 @@ header.--with-home-link a {
 
 .restaurant-card .new {
   color: #278870;
-  font-size: 1.8rem;
+  font-size: 0.8rem;
   font-weight: 700;
 }
 .restaurant-card a {
@@ -424,17 +445,21 @@ header.--with-home-link a {
   text-decoration: none;
 }
 .restaurant-card__description--left h2, .restaurant-card__description--left p {
-  font-size: 2.3rem;
+  font-size: 1rem;
 }
 .restaurant-card__description--left p {
   font-weight: 400;
 }
 .restaurant-card__description--right {
-  font-size: 4rem;
+  font-size: 1.5rem;
   text-align: end;
 }
 
+.dishe__description {
+  font-size: 0.9rem;
+}
 .dishe__description--complement p {
+  font-size: 0.8rem;
   font-weight: 400;
 }
 .dishe__description--complement p.ellipsis {
@@ -449,21 +474,20 @@ header.--with-home-link a {
 }
 .dishe__check {
   color: white;
-  font-size: 2.5rem;
+  font-size: 1rem;
 }
 
 /** Footer **/
 footer {
   color: white;
 }
-footer p {
+footer p a {
   font-family: "Shrikhand", sans-serif;
-  font-size: 2rem;
-  font-weight: 400;
+  font-size: 1rem;
 }
 footer a {
   color: white;
-  font-size: 2rem;
+  font-size: 0.8rem;
   font-weight: 400;
   text-decoration: none;
 }
@@ -490,6 +514,16 @@ footer a {
   to {
     opacity: 1;
     transform: translate(0, 0);
+  }
+}
+@keyframes dishe-check {
+  from {
+    flex: 0;
+    transform: translate(100%);
+  }
+  to {
+    flex: 0.2;
+    transform: translate(0);
   }
 }
 .loader-container {
@@ -538,9 +572,13 @@ footer a {
   border-top-color: #99E2D0;
 }
 
+body {
+  min-width: 320px;
+}
+
 header h1 {
   text-align: center;
-  margin: 40px 0 20px 0;
+  margin: 1rem 0 0.5rem 0;
 }
 header.--with-home-link {
   position: relative;
@@ -549,35 +587,40 @@ header.--with-home-link a {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 30px;
+  left: 1.5rem;
 }
 
 footer {
-  padding: 0 40px 0 40px;
+  padding: 0 1rem 0 1rem;
   background-color: #353535;
-  padding-top: 25px;
+  padding-top: 1.3rem;
+}
+footer p {
+  margin: 0;
 }
 footer ul {
   list-style-type: none;
   margin: 0;
+  margin-top: 1rem;
   padding: 0;
+  padding-bottom: 1rem;
 }
 footer ul li {
-  padding-bottom: 20px;
+  padding-bottom: 0.4rem;
 }
 footer ul i {
   display: block;
-  width: 60px;
+  width: 1.5rem;
 }
 
 .button {
   display: block;
-  width: 65%;
+  width: 70%;
   background: linear-gradient(-5deg, #9356DC, #FF79DA);
   border-radius: 50px;
   box-shadow: 0 10px 10px 0 #cfcfcf;
   margin: 0 auto;
-  padding: 33px;
+  padding: 0.8rem;
 }
 .button:hover {
   filter: brightness(125%);
@@ -585,44 +628,43 @@ footer ul i {
 
 .restaurant-card {
   background-color: white;
-  border-radius: 30px;
-  box-shadow: 0 10px 30px 0 #cfcfcf;
+  border-radius: 1rem;
+  box-shadow: 0 0.1rem 30px 0 #cfcfcf;
   overflow: hidden;
+  position: relative;
 }
 .restaurant-card img {
-  height: 356px;
+  height: 9.3rem;
   width: 100%;
   object-fit: cover;
 }
 .restaurant-card .new {
   background-color: #99E2D0;
-  border-radius: 5px;
-  margin-top: 25px;
-  margin-right: 25px;
-  padding: 13px 25px;
+  border-radius: 0.1rem;
+  padding: 0.35rem 0.7rem;
   position: absolute;
-  right: 40px;
+  margin: 0;
+  right: 0.7rem;
+  top: 0.7rem;
 }
 .restaurant-card__description {
-  height: 164px;
   display: flex;
   align-items: center;
+  padding: 0.6rem 0 0.7rem 0;
 }
 .restaurant-card__description--left {
   flex: 1;
-  width: 100%;
-  padding-left: 25px;
+  padding-left: 1rem;
 }
 .restaurant-card__description--left h2, .restaurant-card__description--left p {
   margin: 0;
 }
 .restaurant-card__description--left p {
-  padding-top: 10px;
+  padding-top: 0.2rem;
 }
 .restaurant-card__description--right {
   flex: 0.2;
-  width: 100%;
-  padding-right: 40px;
+  padding-right: 1.5rem;
 }
 .restaurant-card__description--right i:hover:before {
   font-weight: 900;
@@ -637,9 +679,9 @@ footer ul i {
   justify-content: space-between;
   align-items: stretch;
   background-color: white;
-  border-radius: 30px;
-  box-shadow: 0 10px 30px 0 #cfcfcf;
-  margin-bottom: 30px;
+  border-radius: 1rem;
+  box-shadow: 0 0.2rem 30px 0 #cfcfcf;
+  margin-bottom: 1rem;
   animation: dishes-loader 1s ease-out 1 both;
   overflow: hidden;
 }
@@ -655,75 +697,73 @@ footer ul i {
 .dishe__description {
   flex: 1;
   min-width: 0;
-  padding: 25px 0 25px 20px;
+  padding: 0.5rem 0 0.5rem 0.7rem;
 }
 .dishe__description--complement {
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
-  padding-right: 30px;
+  margin-top: 0.2rem;
+  padding-right: 0.2rem;
 }
 .dishe__check {
-  flex: 0.2;
+  flex: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #99E2D0;
-  border-radius: 0 30px 30px 0;
-  display: none;
-  position: relative;
-  right: -112px;
-  transition: transform 500ms ease-in-out;
+  transform: translate(100%);
 }
 .dishe__check i {
-  transform: rotate(-270deg) scale(1, 1);
+  transform: rotate(-270deg);
   transition: transform 400ms 100ms ease-in-out;
 }
 .dishe:hover .dishe__check {
-  display: flex;
-  transform: translate(-112px, 0);
+  animation: dishe-check 500ms ease-out forwards alternate;
 }
 .dishe:hover .dishe__check i {
   transform: rotate(0deg);
 }
+.dishe:hover p, .dishe:hover h3 {
+  padding-right: 1rem;
+}
 .dishe p, .dishe h3 {
   margin: 0;
-  padding-right: 15px;
 }
 
 .home .location {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 33px;
+  gap: 1rem;
   background-color: #eaeaea;
-  box-shadow: inset 0 15px 10px -10px #cfcfcf;
-  padding-top: 4px;
+  box-shadow: inset 0 0.4rem 10px -10px #cfcfcf;
 }
 .home .presentation {
-  padding: 0 40px 0 40px;
+  padding: 0 1rem 0 1rem;
   text-align: center;
   background: linear-gradient(white, #f6f6f6);
-  padding-bottom: 115px;
+  padding-bottom: 3rem;
 }
 .home .presentation h1 {
-  padding: 50px 80px 0 80px;
+  margin: 0.65rem 0 0 0;
+  padding: 1.3rem 1.2rem 0 1.2rem;
 }
 .home .presentation p {
-  padding-bottom: 28px;
+  margin-top: 0.7rem;
+  margin-bottom: 1.6rem;
 }
 .home .manual {
-  padding: 0 40px 0 40px;
-  padding-top: 65px;
+  padding: 0 1rem 0 1rem;
+  padding-top: 1.8rem;
 }
 .home .manual ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  gap: 1.2rem;
   list-style-type: none;
-  margin-left: 23px;
-  margin-top: 60px;
+  margin-left: 1rem;
+  margin-top: 1.55rem;
   padding: 0;
 }
 .home .manual li {
@@ -732,45 +772,45 @@ footer ul i {
   background-color: #f6f6f6;
   border-radius: 45px;
   box-shadow: 0 10px 30px 0 #cfcfcf;
-  padding: 60px;
-  padding-left: 170px;
+  padding: 1.5rem;
+  padding-left: 4rem;
 }
 .home .manual li:hover {
   background-color: #f2eafb;
 }
 .home .manual li i {
   position: absolute;
-  left: 120px;
+  left: 4rem;
 }
 .home .manual li::before {
   content: counter(list);
   position: absolute;
-  left: 40px;
+  left: 1.5rem;
   background-color: #9356DC;
   border-radius: 50%;
-  padding: 0.4rem 0.9rem;
+  padding: 0.2rem 0.4rem;
 }
 .home .restaurants {
-  padding: 0 40px 0 40px;
+  padding: 0 1rem 0 1rem;
   background-color: #f6f6f6;
-  margin-top: 138px;
-  padding-bottom: 125px;
-  padding-top: 80px;
+  margin-top: 3.5em;
+  padding-bottom: 3.5rem;
+  padding-top: 2rem;
 }
 .home .restaurants__list {
   display: flex;
   flex-direction: column;
-  gap: 35px;
-  margin-top: 45px;
+  gap: 1rem;
+  margin-top: 1.2rem;
 }
 
 .restaurant {
   background-color: #f6f6f6;
-  padding-bottom: 120px;
+  padding-bottom: 3.5rem;
 }
 .restaurant__illustration {
   width: 100%;
-  max-height: 512px;
+  height: 14rem;
   object-fit: cover;
 }
 .restaurant__title {
@@ -778,11 +818,11 @@ footer ul i {
   justify-content: space-between;
   align-items: center;
   position: relative;
-  top: -72px;
+  top: -2.3rem;
   background-color: #f6f6f6;
-  border-radius: 70px;
-  padding: 42px 45px 0 45px;
-  margin-bottom: -105px;
+  border-radius: 2.2rem;
+  padding: 1rem 1.5rem 0 1rem;
+  margin-bottom: -3.3rem;
 }
 .restaurant__title i:hover:before {
   font-weight: 900;
@@ -792,22 +832,22 @@ footer ul i {
   -webkit-text-fill-color: transparent;
 }
 .restaurant__menu h2 {
-  padding: 40px 45px 0 45px;
+  padding: 1rem 1rem 0 1rem;
 }
 .restaurant__menu h2:after {
   content: "";
   display: block;
-  border-bottom: solid 5px #99E2D0;
-  transform: scaleX(0.125);
+  border-bottom: solid 0.2em #99E2D0;
+  transform: scaleX(0.15);
   transform-origin: 0% 0%;
-  padding-top: 10px;
+  padding-top: 0.2rem;
 }
 .restaurant__menu .button {
-  margin-top: 80px;
+  margin-top: 2.2rem;
   max-width: 55%;
 }
 .restaurant .dishes-list {
-  padding: 0 30px 0 30px;
+  padding: 0 1rem 0 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
