--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -9,3 +9,12 @@
 @mixin padding-main {
     padding: 0 $padding-main 0 $padding-main;
 }
+
+@mixin mq($mq-breakpoint, $mq-breakpoints: $breakpoints) {
+    @if map-has-key($mq-breakpoints, $mq-breakpoint) {
+        $mq-breakpoint: map-get($mq-breakpoints, $mq-breakpoint);
+      }
+    @media screen and (min-width: $mq-breakpoint) {
+        @content;
+    }
+}
