--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,15 +1,25 @@
 @use '../abstracts' as *;
 
+:root, html {
+    font-size: 1rem;
+    @include mq(small){
+        font-size: 1.7rem;
+    }
+    @include mq(medium){
+        font-size: 2.35rem;
+    }
+}
+
 body {
     font-family: 'Roboto', sans-serif;
-    font-size: 2em;
+    font-size: 1rem;
     font-weight: 700;
 }
 
 /** Layout **/
 
 h1 {
-    font-size: 3.1rem;
+    font-size: 1.3rem;
     font-weight: 900;
 }
 
@@ -18,13 +28,14 @@ h1 {
 header {
     h1 {
         font-family: 'Shrikhand', sans-serif;
-        font-size: 3.90rem;
+        font-size: 1.6rem;
         font-weight: 400;
 
         a {
             color: black;
             text-decoration: none;
         }
+
     }
 
     &.--with-home-link {
@@ -36,23 +47,27 @@ header {
 
 /** Home **/
 
+.location {
+    font-size: 0.9rem;
+}
+
 .presentation {
     p {
-        font-size: 2.2rem;
         font-weight: 400;
     }
 }
 
 .manual {
     li {
+        font-size: 0.9rem;
         i {
             color: $color-txt-icone;
-            font-size: 2.6rem;
+            font-size: 1rem;
         }
 
         &::before {
             color: white;
-            font-size: 1.7rem;
+            font-size: 0.7rem;
             font-weight: 400;
         }
 
@@ -68,17 +83,17 @@ header {
     &__title {
         h1 {
             font-family: 'Shrikhand', sans-serif;
-            font-size: 3.5rem;
+            font-size: 1.4rem;
             font-weight: 400;
         }
         i {
-            font-size: 4rem;
+            font-size: 1.5rem;
         }
         
     }
     &__menu {
         h2 {
-            font-size: 2rem;
+            font-size: 1rem;
             font-weight: 400;
         }
     }
@@ -88,6 +103,7 @@ header {
 
 .button {
     color: white;
+    font-size: 0.9rem;
     font-weight: 400;
     text-align: center;
     text-decoration: none;
@@ -96,7 +112,7 @@ header {
 .restaurant-card {
     .new {
         color: darken($color-tertiary, 40);
-        font-size: 1.8rem;
+        font-size: 0.8rem;
         font-weight: 700;
     }
 
@@ -108,7 +124,7 @@ header {
     &__description {
         &--left {
             h2, p {
-                font-size: 2.3rem;
+                font-size: 1rem;
             }
         
             p {
@@ -117,7 +133,7 @@ header {
         }
 
         &--right {
-            font-size: 4rem;
+            font-size: 1.5rem;
             text-align: end;
         }
     }
@@ -125,7 +141,9 @@ header {
 
 .dishe {
     &__description {
+        font-size: 0.9rem;
         &--complement p {
+            font-size: 0.8rem;
             font-weight: 400;
             &.ellipsis {
                 text-overflow: ellipsis;
@@ -141,7 +159,7 @@ header {
     }
     &__check {
         color: white;
-        font-size: 2.5rem;
+        font-size: 1rem;
     }
 }
 
@@ -150,15 +168,14 @@ header {
 footer {
     color: white;
 
-    p {
+    p a {
         font-family: 'Shrikhand', sans-serif;
-        font-size: 2rem;
-        font-weight: 400;
+        font-size: 1rem;
     }
 
     a {
         color: white;
-        font-size: 2rem;
+        font-size: 0.8rem;
         font-weight: 400;
         text-decoration: none;
     }
