--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,21 +4,29 @@ footer {
     @include padding-main;
 
     background-color: $color-background-footer;
-    padding-top: 25px;
+    padding-top: 1.3rem;
+
+    p {
+        margin: 0;
+    }
 
     ul {
         list-style-type: none;
 
         margin: 0;
+        margin-top: 1rem;
         padding: 0;
+        padding-bottom: 1rem;
+        
 
         li {
-            padding-bottom: 20px;
+            
+            padding-bottom: 0.4rem;
         }
 
         i {
             display: block;
-            width: 60px;
+            width: 1.5rem;
         }
     }
 
