--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,11 +6,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 33px;
+        gap: 1rem;
     
         background-color: $color-background-location;
-        box-shadow: inset 0 15px 10px -10px $color-shadow;
-        padding-top: 4px;
+        box-shadow: inset 0 0.4rem 10px -10px $color-shadow;
     }
     
     .presentation {
@@ -19,31 +18,33 @@
         text-align: center;
     
         background: linear-gradient(white, $color-background-bloc);
-        padding-bottom: 115px;
+        padding-bottom: 3rem;
     
         h1 {
-            padding: 50px $padding-main*2 0 $padding-main*2;
+            margin: 0.65rem 0 0 0;
+            padding: 1.3rem 1.2rem 0 1.2rem;
         }
-    
+
         p {
-            padding-bottom: 28px;
+            margin-top: 0.7rem;
+            margin-bottom: 1.6rem;
         }
     }
     
     .manual {
         @include padding-main;
     
-        padding-top: 65px;
+        padding-top: 1.8rem;
     
         ul {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 50px;
+            gap: 1.2rem;
             
             list-style-type: none;
-            margin-left: 23px;
-            margin-top: 60px;
+            margin-left: 1rem;
+            margin-top: 1.55rem;
             padding: 0;
         }
     
@@ -54,8 +55,8 @@
             background-color: $color-background-bloc;
             border-radius: 45px;
             box-shadow: 0 10px 30px 0 $color-shadow;
-            padding: 60px;
-            padding-left: 170px;
+            padding: 1.5rem;
+            padding-left: 4rem;
 
             &:hover {
                 background-color: lighten($color-primary, 35);
@@ -63,19 +64,18 @@
 
             i {
                 position: absolute;
-                left: 120px;
+                left: 4rem;
             }
     
             &::before {
                 content: counter(list);
                 position: absolute;
-                left: $padding-main;
+                left: 1.5rem;
     
                 background-color: $color-primary;
                 border-radius: 50%;
-                padding: 0.4rem 0.9rem;
+                padding: 0.2rem 0.4rem;
             }
-
         }
     }
 
@@ -83,16 +83,16 @@
         @include padding-main;
     
         background-color: $color-background-bloc;
-        margin-top: 138px;
-        padding-bottom: 125px;
-        padding-top: 80px;
+        margin-top: 3.5em;
+        padding-bottom: 3.5rem;
+        padding-top: 2rem;
     
         &__list {
             display: flex;
             flex-direction: column;
-            gap: 35px;
+            gap: 1rem;
     
-            margin-top: 45px;
+            margin-top: 1.2rem;
         }
     }
     
