--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,11 @@ template {
     font-size: 2.35rem;
   }
 }
+@media screen and (min-width: 992px) {
+  :root, html {
+    font-size: 1.95rem;
+  }
+}
 
 body {
   font-family: "Roboto", sans-serif;
@@ -458,9 +463,19 @@ header.--with-home-link a {
 .dishe__description {
   font-size: 0.9rem;
 }
+@media screen and (min-width: 992px) {
+  .dishe__description {
+    font-size: 0.7rem;
+  }
+}
 .dishe__description--complement p {
   font-size: 0.8rem;
   font-weight: 400;
+}
+@media screen and (min-width: 992px) {
+  .dishe__description--complement p {
+    font-size: 0.7rem;
+  }
 }
 .dishe__description--complement p.ellipsis {
   text-overflow: ellipsis;
@@ -626,6 +641,28 @@ footer ul i {
   filter: brightness(125%);
 }
 
+.fa-heart {
+  background-color: transparent;
+  display: inline-block;
+  transform: translateX(50%);
+  position: relative;
+}
+.fa-heart > i {
+  display: inline-block;
+  transform: translateX(-100%);
+  opacity: 0;
+  position: absolute;
+}
+.fa-heart > i:hover {
+  font-weight: 900;
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(-5deg, #FF79DA, #9356DC);
+  -webkit-text-fill-color: transparent;
+  transition: opacity 500ms ease-in;
+  opacity: 1;
+}
+
 .restaurant-card {
   background-color: white;
   border-radius: 1rem;
@@ -666,13 +703,6 @@ footer ul i {
   flex: 0.2;
   padding-right: 1.5rem;
 }
-.restaurant-card__description--right i:hover:before {
-  font-weight: 900;
-  background-clip: text;
-  -webkit-background-clip: text;
-  background-image: linear-gradient(-5deg, #FF79DA, #9356DC);
-  -webkit-text-fill-color: transparent;
-}
 
 .dishe {
   display: flex;
@@ -693,6 +723,11 @@ footer ul i {
 }
 .dishe:nth-child(4) {
   animation-delay: 600ms;
+}
+@media screen and (min-width: 992px) {
+  .dishe {
+    flex: 1 1 14rem;
+  }
 }
 .dishe__description {
   flex: 1;
@@ -759,33 +794,43 @@ footer ul i {
 .home .manual ul {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1.2rem;
   list-style-type: none;
   margin-left: 1rem;
   margin-top: 1.55rem;
   padding: 0;
 }
+@media screen and (min-width: 992px) {
+  .home .manual ul {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
 .home .manual li {
   counter-increment: list;
-  width: 100%;
   background-color: #f6f6f6;
   border-radius: 45px;
   box-shadow: 0 10px 30px 0 #cfcfcf;
   padding: 1.5rem;
   padding-left: 4rem;
+  position: relative;
+}
+@media screen and (min-width: 992px) {
+  .home .manual li {
+    flex: 2 1 auto;
+  }
 }
 .home .manual li:hover {
   background-color: #f2eafb;
 }
 .home .manual li i {
   position: absolute;
-  left: 4rem;
+  left: 2rem;
 }
 .home .manual li::before {
   content: counter(list);
   position: absolute;
-  left: 1.5rem;
+  left: -0.5rem;
   background-color: #9356DC;
   border-radius: 50%;
   padding: 0.2rem 0.4rem;
@@ -802,6 +847,13 @@ footer ul i {
   flex-direction: column;
   gap: 1rem;
   margin-top: 1.2rem;
+}
+@media screen and (min-width: 992px) {
+  .home .restaurants__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 }
 
 .restaurant {
@@ -824,13 +876,6 @@ footer ul i {
   padding: 1rem 1.5rem 0 1rem;
   margin-bottom: -3.3rem;
 }
-.restaurant__title i:hover:before {
-  font-weight: 900;
-  background-clip: text;
-  -webkit-background-clip: text;
-  background-image: linear-gradient(-5deg, #FF79DA, #9356DC);
-  -webkit-text-fill-color: transparent;
-}
 .restaurant__menu h2 {
   padding: 1rem 1rem 0 1rem;
 }
@@ -848,6 +893,15 @@ footer ul i {
 }
 .restaurant .dishes-list {
   padding: 0 1rem 0 1rem;
+}
+@media screen and (min-width: 992px) {
+  .restaurant .dishes-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 1rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
