--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -6,6 +6,7 @@
     box-shadow: 0 0.1rem 30px 0 $color-shadow;
     overflow: hidden;
     position: relative;
+    flex: 1 1 13rem;
 
     img {
         height: 9.3rem;
